tests/ui/parser/missing-fn-issue-65381-3.rs
pub const initial_value() -> Self {
//~^ ERROR missing `fn` for function definition
//~| HELP add `fn` here to parse `initial_value` as a function
}
